# NumberTheory

./: LICENSE  NumberTheory.cabal
Math/: NumberTheory.hs
old/: MyList.hs  NumberTheory.hs
